# GPT-GEC

./: README.md  pyproject.toml  run_gec.py
gpt_gec/: __init__.py  config.py  gpt.py
