[tool.poetry]
name = "gpt-gec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gpt_gec"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.1"
errant = "^2.3.3"
levenshtein = "^0.20.9"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
